Merged HEAD-BUG-FIX (4.3/Cloud) to HEAD (4.3/Cloud)    60186: BDE-195 Gave up fixing Alfresco, and just run the same test suites as the Ant build in the Maven build
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@62299 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261